header spacing done + fixes

--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -1,5 +1,4 @@
 *,
-*:hover,
 *::before,
 *::after {
 	margin: 0;
@@ -12,11 +11,15 @@ html {
 }
 body {
 	font-family: "Gilroy", sans-serif;
+	font-weight: normal;
+	font-size: 1rem;
 	background: $clr-dark;
 }
 
 button {
 	font-family: "Gilroy", sans-serif;
+	font-weight: normal;
+	font-size: 1rem;
 }
 li {
 	list-style: none;
