--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,22 +1,71 @@
 #header {
 	display: flex;
 	align-items: center;
+	padding: 3.7rem 5.2rem;
 	color: $clr-white;
 }
 
 .logo-info {
 	display: flex;
 }
+.logo {
+	width: 7rem;
+	img {
+		width: 100%;
+		height: auto;
+	}
+}
 
 .logo-text {
-	width: 154px;
+	margin-left: 1.57rem;
+	width: 11rem;
+	line-height: 1.46rem;
+	font-size: 1.07rem;
 	font-weight: 400;
 }
-
+#header-nav {
+	margin-left: 3.92rem;
+}
 .nav-links {
 	display: flex;
+	li {
+		text-transform: uppercase;
+		line-height: 1.36;
+		letter-spacing: 0.15em;
+		margin-left: 3.07rem;
+	}
 }
 
+.search-btn {
+	margin-left: 3.92rem;
+	width: 1.78rem;
+	img {
+		width: 100%;
+		height: auto;
+	}
+}
+
+.header-contact {
+	margin-left: 3.92rem;
+}
+
+.phone-info {
+	font-size: 0.86rem;
+}
+
+.phone-number {
+	// white-space: nowrap;
+	font-size: 1.7rem;
+	font-weight: 600;
+}
+
+.split-btn {
+	margin-left: 3.92rem;
+}
+
+//
+.angle-down {
+}
 .submenu {
 	display: none;
 }
